# server/src/main/java/fabriziob/com/subastapp/controller/auth/AuthenticationResponse.java
@@ -12,4 +12,5 @@ import lombok.NoArgsConstructor;
 public class AuthenticationResponse {
     private String accessToken;
     private String categoria;
+    private boolean habilitado;
 }
