# server/src/main/java/fabriziob/com/subastapp/entity/enums/EstadoAceptacionItem.java
@@ -1,0 +1,5 @@
+package fabriziob.com.subastapp.entity.enums;
+
+public enum EstadoAceptacionItem {
+    espera, rechazado, aceptado
+}
