# server/src/main/java/fabriziob/com/subastapp/entity/enums/EstadoDetalladoSubasta.java
@@ -1,6 +1,7 @@
 package fabriziob.com.subastapp.entity.enums;
 
 public enum EstadoDetalladoSubasta {
+    en_espera,
     creada,
     publicada,
     en_curso,
